--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.3",
+    "js-cookie": "^3.0.5",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
